# hermes-flight-recorder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: minimal-demo.py  policy-deny.json
src/hermes_flight_recorder/: __init__.py  flight_recorder.py  flight_recorder_explain.py  flight_recorder_index.py  flight_recorder_query.py  flight_recorder_replay.py  flight_recorder_schema.py  flight_recorder_timeline.py  flight_recorder_wrappers.py  hermes_fr.py
src/hermes_flight_recorder/integrations/: __init__.py  anthropic.py  openai.py
tests/: test_flight_recorder.py  test_integrations_anthropic.py  test_integrations_openai.py
